--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -3,6 +3,33 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
  */
-body {
-  padding-top: 56px;
+html{
+	height: 100%;
+}
+
+body{
+	padding-top: 70px;
+	height: 100%;
+}
+
+
+
+.wrapper{
+	min-height:100%;
+	position: relative;
+}
+
+.content{
+	padding-bottom: 60px;
+	
+}
+
+footer{
+	
+}
+
+.footer{
+	position:absolute;
+	bottom:0;
+	width:100%;
 }
