--- a/onlineshopping/src/main/webapp/assets/css/myapp5.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp5.css
@@ -8,7 +8,6 @@ html{
 }
 
 body{
-	padding-top: 70px;
 	height: 100%;
 }
 
@@ -18,7 +17,7 @@ body{
 }
 
 .content{
-	padding-bottom: 60px;
+	padding-bottom: 90px;
 	
 }
 
@@ -28,8 +27,9 @@ footer{
 
 .footer{
 	position:absolute;
-	bottom:0;
+	bottom:0px;
 	width:100%;
+	height: 80px;
 }
 
 .dataTableImg{
